--- a/static/css/feedback.css
+++ b/static/css/feedback.css
@@ -1,6 +1,8 @@
-#feedback {width:600px;}
-<li><strong>名字:</strong><p>想说啥就说点啥，不说也没关系</p><span>X</span></li><hr/>
-#feedback li {margin:2px 2px; padding:3px 3px;position:absolute;}
-#feedback li strong, #feedback li p, #feedback li span{float:left;margin-left:5px;}
-#feedback li span a{color:gray;}
-#feedback li span a:hover{color:white;background:green;}
+#inbox {width:600px; display:block;}
+.message {display:inline-block; list-style:none; width:600px; min-height:20px; margin-top:6px; padding:3px 3px;}
+.message strong, .message p{float:left;margin-left:5px;}
+.message a{float:right;margin-right:5px;color:gray;}
+.message a:hover{color:white;background:green;}
+
+.rep-list {display:block;margin-bottom:3px;}
+.show-reply {display:inline-block; list-style:none; width:400px; height:20px; margin:2px 2px 2px 100px; padding:5px 3px;}
