--- a/static/css/feedback.css
+++ b/static/css/feedback.css
@@ -1,10 +1,10 @@
 #inbox {width:600px; display:block;}
 .show-reply {display:inline-block; list-style:none; width:400px; height:20px; margin:2px 2px 2px 100px; padding:5px 3px;}
 .remove{display:none;}
-a:link{text-decoration:none; color:#c00;}
-a:visited {text-decoration:none; color:#c30;}
-a:hover {text-decoration:none; color:#fff;background:#0DBC51;}
-a:active {text-decoration:none; color:#F90;}
+a:link{text-decoration:none;}
+a:visited {text-decoration:none;}
+a:hover {text-decoration:none;}
+a:active {text-decoration:none;}
 
 
 .clearfix {display: block;}
