--- a/static/css/frame.css
+++ b/static/css/frame.css
@@ -66,6 +66,7 @@ a:active{text-decoration:none;}
 #navi{width:560px;}
 #opt{width:200px;}
 #header img, #navi, #opt{float:left;}
+#header img{background:#C9FFD3;}
 #opt a{margin-left:5px;}
 #opt img{float:right;}
 #userinfo{font-size:16px;}
