--- a/static/css/event.css
+++ b/static/css/event.css
@@ -1,8 +1,8 @@
 /* event publish */
-#event{margin:5px;}
+#event{margin:5px;background:#FDFFD3;}
 #event h1{font:bold 30px/30px Arial;}
 #event form{display:block;font-size:16px;margin:5px 5px;padding:20px 20px;width:400px;}
-.event_li{position:relative; margin-bottom:25px;padding-top:10px;display:block;}
+.event_li{position:relative; margin-bottom:25px;padding-top:10px;display:block;width:auto;clear:both;}
 .event_li .needed{color:orange;}
 .event_li .eleft, .event_li .eright{float:left;}
 .event_li .eleft{width:100px;}
