--- a/static/css/frame.css
+++ b/static/css/frame.css
@@ -149,6 +149,6 @@ em, i{font-style:normal;font-weight:normal;}
 #tab .Menubox ul{margin:0px;padding:0px;}
 #tab .Menubox li{float:left;display:block;cursor:pointer;width:114px;text-align:center;color:#F5F5F5;}
 #tab .Menubox li.hover{padding:0px;background:#fff;width:100px;border:1px solid #A9A9A9;border-bottom:0px solid red;background:#696969;color:#F5F5F5;height:30px;}
-#tab .contentbox{clear:both;margin-top:0px;border:1px solid #A9A9A9;border-top:none;text-align:center;padding-top:8px;}
+#tab .contentbox{clear:both;margin-top:0px;border:1px solid #A9A9A9;border-top:none;text-align:center;padding-top:8px;background:#FDFFD3;}
 
 /* list */
