--- a/static/css/weibo.css
+++ b/static/css/weibo.css
@@ -42,4 +42,4 @@ em, i{font-style:normal;font-weight:normal;}
 .wb_item .content a{word-wrap:break-word;}
 .loading {background: url(/static/img/loading-fb.gif) no-repeat;vertical-align: middle;margin:0 auto;width:40px;}
 
-#weibo_item{background:white;padding:20px 50px 10px 20px;}
+#weibo_item{background:white;padding:20px 50px 10px 20px;width:705px;}
