--- a/static/css/weibo.css
+++ b/static/css/weibo.css
@@ -1,10 +1,11 @@
-#weibo {min-width:300px; max-width:705px;display:block;background:white;padding: 20px 50px 10px 20px;}
+#weibo {min-width:300px; max-width:705px;display:block;background:white;padding: 20px 20px 10px 20px;}
 .show-reply {display:inline-block; list-style:none; width:400px; height:20px; margin:2px 2px 2px 100px; padding:5px 3px;}
 .remove{display:none;}
 #weibo hr{background:#DDD;color:#DDD;clear:both;float:none;width:100%;height:1px;margin:0 0 17px;border:none;}
 .wb_items{border-color: #F1F1F1;color:#444;cursor:default;margin:-3px 0 0;overflow:hidden;}
 .wb_items a:hover{color:#F5F5F5;background:#0078B6;}
-.wb_item{border-color: #E1E4E5;padding: 0 0 15px 0;margin: 0 0 17px;zoom: 1;border-bottom-width: 1px;border-bottom-style: dotted;}
+.wb_item{border-color: #E1E4E5;padding: 13px 5px 15px 5px;margin:0;zoom: 1;border-bottom-width: 1px;border-bottom-style: dotted;}
+.wb_item:hover{background:#F5F5F5;}
 .wb_item .face {float: left;display: inline;width: 50px;padding: 3px 0 6px;}
 .wb_item .face img {display: block;}
 .wb_item .content {word-wrap: break-word;font-size: 14px;margin: 0 0 0 60px;line-height: 22px;font-size: 14px;line-height: 22px;}
@@ -15,7 +16,7 @@
 .wb_item .content p.W_info {padding: 3px 0 0;}
 .wb_item .wb_opt a.date {margin: 0 20px 0 0;}
 .wb_item .wb_opt {font-size: 12px;margin:0;}
-.wb_item .wb_opt span {float: right;display: inline;}
+.wb_item .wb_opt span {float: right;margin-right:20px;display: inline;}
 .wb_vline {margin: 0 5px;color: #E1E4E5;}
 .clear {clear: both;height: 0;font: 0/0 Arial;visibility: hidden;}
 a, .wb_items a, a.wb_items{color: #0078B6;}
