--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -144,7 +144,7 @@ a {
 }
 a:hover {
   color: #005580;
-  text-decoration: underline;
+  text-decoration: none;
 }
 .row {
   margin-left: -20px;
@@ -680,19 +680,19 @@ input[type="submit"] {
 }
 select,
 input[type="file"] {
-  height: 28px;
+  height: 18px;
   /* In IE7, the height of the select element cannot be changed by height, only font-size */
 
   *margin-top: 4px;
   /* For IE7, add top margin to align select with labels */
 
-  line-height: 28px;
+  line-height: 18px;
 }
 input[type="file"] {
   line-height: 18px \9;
 }
 select {
-  width: 220px;
+  width: auto;
   background-color: #ffffff;
 }
 select[multiple],
