--- a/static/css/mybootstrap.css
+++ b/static/css/mybootstrap.css
@@ -1,3 +1,27 @@
 .breadcrumb li ul li {
     display: block;
 }
+
+.guess-warp {padding:1px;}
+.guess-list {background:#EEEBE7;padding:1px;margin-left:0px;}
+.item-a, .item-b {background:white;margin:1px;}
+.item-a img, .item-b img {margin:30px;}
+.item-info {color:#999;}
+
+.mover img {filter:alpha(opacity=80);opacity:.8;}
+.mover .item-info {color:#555;}
+
+.group-a img, .group-a .item-info{float:left;}
+.group-a .item-a, .group-a .item-b{float:right;}
+.group-b {}
+.group-b .item-a{float:left;}
+.group-c img, .group-c .item-info{float:right;}
+.group-c .item-a, .group-c .item-b{float:left;}
+.group-c .item-info {margin-left:30px;}
+
+.item-a {width:230px;height:360px;}
+.item-a img {width:170px;}
+.item-a .item-info {float:left;padding:0px 30px;}
+.item-b {width:462px;height:179px;}
+.item-b img {height:119px;}
+.item-b .item-info {float:left;padding:30px 0px;}
