--- a/static/css/mybootstrap.css
+++ b/static/css/mybootstrap.css
@@ -25,3 +25,5 @@
 .item-b {width:462px;height:179px;}
 .item-b img {height:119px;}
 .item-b .item-info {float:left;padding:30px 0px;}
+
+.bg-white {background:white;}
