--- a/static/css/note.css
+++ b/static/css/note.css
@@ -1,7 +1,8 @@
 #note_text {height:400px;}
-pre p, pre .p {
-font-size: 13px;
-line-height: 1.62;
+#note-list p, #note-list .p, #note-item p, #note-item .p {
+font-size: 15px;
+padding-bottom: 14px;
+line-height: 2.0;
 font-family: Arial,Helvetica,sans-serif;
 word-wrap: break-word;
 white-space: pre-wrap;
