--- a/static/css/mybootstrap.css
+++ b/static/css/mybootstrap.css
@@ -1,3 +1,5 @@
+body {background-color: #F2F0F0 !important;}
+ol, ul {list-style: none;}
 .clear {clear:both;}
 .breadcrumb li ul li {
     display: block;
@@ -34,3 +36,7 @@
 .item-b .item-info {float:left;padding:30px 0px;}
 
 .bg-white {background:white;}
+
+.mt20 {margin-top:20px;}
+.of_h {overflow: hidden;}
+
