--- a/static/css/mybootstrap.css
+++ b/static/css/mybootstrap.css
@@ -40,3 +40,4 @@ ol, ul {list-style: none;}
 .mt20 {margin-top:20px;}
 .of_h {overflow: hidden;}
 
+.box { background:white;padding:5px;-webkit-box-shadow:1px 1px 3px rgba(162, 162, 162, .8);-moz-box-shadow:1px 1px 3px rgba(162, 162, 162, .8);box-shadow:1px 1px 3px rgba(162, 162, 162, .8);border-radius:4px;}
