--- a/static/css/mybootstrap.css
+++ b/static/css/mybootstrap.css
@@ -1,15 +1,8 @@
 body {background-color: #F2F0F0 !important;}
 ol, ul {list-style: none;}
 .clear {clear:both;}
-.breadcrumb li ul li {
-    display: block;
-}
-
-.alert-default {
-    background-color: #f5f5f5;
-    border-color: #eeeeee;
-    color: #333333;
-}
+.breadcrumb li ul li {display: block;}
+.alert-default {background-color: #f5f5f5;border-color: #eeeeee;color: #333333;}
 
 .guess-warp {padding:1px;}
 .guess-list {background:#EEEBE7;padding:1px;margin-left:0px;}
@@ -37,7 +30,8 @@ ol, ul {list-style: none;}
 
 .bg-white {background:white;}
 
+.mt10 {margin-top:10px;}
 .mt20 {margin-top:20px;}
 .of_h {overflow: hidden;}
-
+.title_center {text-align:center;}
 .box { background:white;padding:5px;-webkit-box-shadow:1px 1px 3px rgba(162, 162, 162, .8);-moz-box-shadow:1px 1px 3px rgba(162, 162, 162, .8);box-shadow:1px 1px 3px rgba(162, 162, 162, .8);border-radius:4px;}
