--- a/static/css/note.css
+++ b/static/css/note.css
@@ -1,19 +1,17 @@
 #note_text {height:400px;}
 #note-list p, #note-list .p, #note-item p, #note-item .p {
-font-size: 15px;
-padding-bottom: 14px;
-line-height: 2.0;
-font-family: Arial,Helvetica,sans-serif;
-word-wrap: break-word;
-white-space: pre-wrap;
-}
-#note-list .abstract{
-font-size: 14px;
+font-size: 16px;
 padding-bottom: 14px;
 line-height: 1.5;
 font-family: Arial,Helvetica,sans-serif;
 word-wrap: break-word;
 white-space: pre-wrap;
+}
+#note-list .abstract{
+font-size: 13px;
+line-height: 1.3;
+font-family: Arial,Helvetica,sans-serif;
+word-wrap: break-word;
 }
 .PICR {
 float: right;
@@ -39,3 +37,30 @@ margin-top: 7px;
 #note-list .face {
     width:60px;
 }
+#thumbnails {
+    overflow: scroll;
+    max-height: 500px;
+    margin-left: -30px;
+}
+#thumbnails .thumbnail {
+    border-width: 0px;
+}
+#thumbnails .thumbnails > li {
+    margin-left:10px;
+}
+#note-item .info {margin: 10px;}
+#note-item .info, #note-item .info a{color: #ccc;}
+#note-item .info a:hover{color: #777;}
+#note-item .info .badge{color: #fff;}
+#note-item .info .badge:hover{color: #eee;}
+
+
+
+
+
+
+
+
+
+
+
